--- a/src/main/resources/lk/kavishka/ijse/tictactoe/main-window.fxml
+++ b/src/main/resources/lk/kavishka/ijse/tictactoe/main-window.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -10,62 +9,59 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-   <children>
-      <AnchorPane fx:id="titleBar" prefHeight="62.0" prefWidth="1200.0" style="-fx-background-color: #3944bc;" styleClass="titleBar">
-         <children>
-            <Text fill="WHITE" layoutX="489.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic-Tac-Toe">
-               <font>
-                  <Font name="Unispace-Bold" size="35.0" />
-               </font>
-            </Text>
-         </children></AnchorPane>
-      <Pane id="pane" layoutX="325.0" layoutY="137.0" prefHeight="550.0" prefWidth="550.0" stylesheets="@../../../../style/style.css">
-         <effect>
-            <DropShadow />
-         </effect>
-         <children>
-             <GridPane fx:id="mainGrid" layoutX="2.0" prefHeight="550.0" prefWidth="547.0">
-                 <columnConstraints>
-                     <ColumnConstraints hgrow="SOMETIMES" minWidth="100" prefWidth="100.0" />
-                     <ColumnConstraints hgrow="SOMETIMES" minWidth="100" prefWidth="100.0" />
-                     <ColumnConstraints hgrow="SOMETIMES" minWidth="100" prefWidth="100.0" />
-                 </columnConstraints>
-                 <rowConstraints>
-                     <RowConstraints minHeight="100" prefHeight="100" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="100" prefHeight="100" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="100" prefHeight="100" vgrow="SOMETIMES" />
-                 </rowConstraints>
-
-                 <!-- Adding Labels as cells with the CSS class "grid-cell" -->
-                 <Label fx:id="cell1" onMouseClicked="#cell1Click" prefHeight="219.0" prefWidth="289.0" styleClass="grid-cell" text="Cell 1" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                 <Label fx:id="cell2" onMouseClicked="#cell2Click" prefHeight="199.0" prefWidth="220.0" styleClass="grid-cell" text="Cell 2" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                 <Label fx:id="cell3" onMouseClicked="#cell3Click" prefHeight="250.0" prefWidth="282.0" styleClass="grid-cell" text="Cell 3" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-                 <Label fx:id="cell4" onMouseClicked="#cell4Click" prefHeight="268.0" prefWidth="249.0" styleClass="grid-cell" text="Cell 4" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                 <Label fx:id="cell5" onMouseClicked="#cell5Click" prefHeight="230.0" prefWidth="262.0" styleClass="grid-cell" text="Cell 5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                 <Label fx:id="cell6" onMouseClicked="#cell6Click" prefHeight="214.0" prefWidth="253.0" styleClass="grid-cell" text="Cell 6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                 <Label fx:id="cell7" onMouseClicked="#cell7Click" prefHeight="234.0" prefWidth="225.0" styleClass="grid-cell" text="Cell 7" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                 <Label fx:id="cell8" onMouseClicked="#cell8Click" prefHeight="204.0" prefWidth="249.0" styleClass="grid-cell" text="Cell 8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                 <Label fx:id="cell9" onMouseClicked="#cell9Click" prefHeight="204.0" prefWidth="235.0" styleClass="grid-cell" text="Cell 9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-
-             </GridPane>
-
-         </children>
-      </Pane>
-      <JFXButton fx:id="Xbtn" layoutX="494.0" layoutY="85.0" prefHeight="40.0" prefWidth="100.0" text="X">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </JFXButton>
-      <JFXButton fx:id="Obtn" layoutX="606.0" layoutY="86.0" prefHeight="40.0" prefWidth="100.0" text="O">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </JFXButton>
-      <Text layoutX="513.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start game or select player">
-         <font>
-            <Font name="Arial" size="15.0" />
-         </font>
-      </Text>
-   </children>
+<AnchorPane fx:id="mainAnchrpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.kavishka.ijse.tictactoe.Board">
+    <children>
+        <AnchorPane fx:id="titleBar" prefHeight="62.0" prefWidth="1200.0" style="-fx-background-color: #3944bc;" styleClass="titleBar">
+            <children>
+                <Text fill="WHITE" layoutX="489.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic-Tac-Toe">
+                    <font>
+                        <Font name="Unispace-Bold" size="35.0" />
+                    </font>
+                </Text>
+            </children></AnchorPane>
+        <Pane id="pane" layoutX="325.0" layoutY="137.0" prefHeight="550.0" prefWidth="550.0" stylesheets="@../../../../style/style.css">
+            <effect>
+                <DropShadow />
+            </effect>
+            <children>
+                <GridPane fx:id="mainGrid" layoutX="2.0" prefHeight="550.0" prefWidth="547.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="100" prefHeight="100" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="100" prefHeight="100" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="100" prefHeight="100" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <!-- Adding Labels as cells with the CSS class "grid-cell" -->
+                    <Label fx:id="cell1" onMouseClicked="#cell1Click" prefHeight="219.0" prefWidth="289.0" styleClass="grid-cell" text="Cell 1" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <Label fx:id="cell2" onMouseClicked="#cell2Click" prefHeight="199.0" prefWidth="220.0" styleClass="grid-cell" text="Cell 2" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <Label fx:id="cell3" onMouseClicked="#cell3Click" prefHeight="250.0" prefWidth="282.0" styleClass="grid-cell" text="Cell 3" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                    <Label fx:id="cell4" onMouseClicked="#cell4Click" prefHeight="268.0" prefWidth="249.0" styleClass="grid-cell" text="Cell 4" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                    <Label fx:id="cell5" onMouseClicked="#cell5Click" prefHeight="230.0" prefWidth="262.0" styleClass="grid-cell" text="Cell 5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label fx:id="cell6" onMouseClicked="#cell6Click" prefHeight="214.0" prefWidth="253.0" styleClass="grid-cell" text="Cell 6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <Label fx:id="cell7" onMouseClicked="#cell7Click" prefHeight="234.0" prefWidth="225.0" styleClass="grid-cell" text="Cell 7" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                    <Label fx:id="cell8" onMouseClicked="#cell8Click" prefHeight="204.0" prefWidth="249.0" styleClass="grid-cell" text="Cell 8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Label fx:id="cell9" onMouseClicked="#cell9Click" prefHeight="204.0" prefWidth="235.0" styleClass="grid-cell" text="Cell 9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                </GridPane>
+            </children>
+        </Pane>
+        <JFXButton fx:id="Xbtn" layoutX="494.0" layoutY="85.0" prefHeight="40.0" prefWidth="100.0" text="X">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </JFXButton>
+        <JFXButton fx:id="Obtn" layoutX="606.0" layoutY="86.0" prefHeight="40.0" prefWidth="100.0" text="O">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </JFXButton>
+        <Text layoutX="513.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start game or select player">
+            <font>
+                <Font name="Arial" size="15.0" />
+            </font>
+        </Text>
+    </children>
 </AnchorPane>
