--- a/src/main/resources/lk/kavishka/ijse/tictactoe/main-window.fxml
+++ b/src/main/resources/lk/kavishka/ijse/tictactoe/main-window.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -9,7 +10,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane fx:id="mainAnchrpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.kavishka.ijse.tictactoe.Board">
+
+<AnchorPane fx:id="mainAnchrpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.kavishka.ijse.tictactoe.BoardImpl">
     <children>
         <AnchorPane fx:id="titleBar" prefHeight="62.0" prefWidth="1200.0" style="-fx-background-color: #3944bc;" styleClass="titleBar">
             <children>
@@ -48,12 +50,12 @@
                 </GridPane>
             </children>
         </Pane>
-        <JFXButton fx:id="Xbtn" layoutX="494.0" layoutY="85.0" prefHeight="40.0" prefWidth="100.0" text="X">
+        <JFXButton fx:id="Xbtn" layoutX="494.0" layoutY="85.0" onAction="#selectX" prefHeight="40.0" prefWidth="100.0" text="X">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
         </JFXButton>
-        <JFXButton fx:id="Obtn" layoutX="606.0" layoutY="86.0" prefHeight="40.0" prefWidth="100.0" text="O">
+        <JFXButton fx:id="Obtn" layoutX="606.0" layoutY="86.0" onAction="#selectO" prefHeight="40.0" prefWidth="100.0" text="O">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
