--- a/src/main/resources/lk/kavishka/ijse/tictactoe/main-window.fxml
+++ b/src/main/resources/lk/kavishka/ijse/tictactoe/main-window.fxml
@@ -15,6 +15,11 @@
     <children>
         <AnchorPane fx:id="titleBar" prefHeight="62.0" prefWidth="1200.0" style="-fx-background-color: #3944bc;" styleClass="titleBar">
             <children>
+            <JFXButton fx:id="resetBtn" layoutX="1086.0" layoutY="9.0" onAction="#resetField" prefHeight="40.0" prefWidth="100.0" text="Reset ⟳" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXButton>
                 <Text fill="WHITE" layoutX="489.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic-Tac-Toe">
                     <font>
                         <Font name="Unispace-Bold" size="35.0" />
