--- a/src/main/resources/view/welcome-window.fxml
+++ b/src/main/resources/view/welcome-window.fxml
@@ -15,12 +15,12 @@
             <Font name="Segoe UI" size="25.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnX" layoutX="223.0" layoutY="126.0" onAction="#btnXOnAction" text="X">
+      <JFXButton fx:id="btnX" layoutX="223.0" layoutY="126.0" onAction="#selectX" text="X">
          <font>
             <Font name="Segoe UI" size="25.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnO" layoutX="333.0" layoutY="126.0" onAction="#btnOOnAction" text="O">
+      <JFXButton fx:id="btnO" layoutX="333.0" layoutY="126.0" onAction="#selectO" text="O">
          <font>
             <Font name="Segoe UI" size="25.0" />
          </font>
