--- a/src/main/resources/view/welcome-window.fxml
+++ b/src/main/resources/view/welcome-window.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.kavishka.ijse.tictactoe.WelcomePage">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.kavishka.ijse.tictactoe.WelcomePage">
    <children>
       <TextField fx:id="txtName" layoutX="95.0" layoutY="259.0" prefHeight="40.0" prefWidth="400.0" promptText="Enter your name" />
       <JFXButton fx:id="btnEnter" layoutX="246.0" layoutY="307.0" onAction="#enterOnAction" text="Enter🡆">
