--- a/src/main/resources/view/welcome-window.fxml
+++ b/src/main/resources/view/welcome-window.fxml
@@ -4,25 +4,27 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.kavishka.ijse.tictactoe.WelcomePage">
    <children>
-      <TextField fx:id="txtName" layoutX="95.0" layoutY="259.0" prefHeight="40.0" prefWidth="400.0" promptText="Enter your name" />
-      <JFXButton fx:id="btnEnter" layoutX="246.0" layoutY="307.0" onAction="#enterOnAction" text="Enter🡆">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0c3963" height="59.0" layoutX="-6.0" layoutY="13.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" width="606.0" />
+      <TextField fx:id="txtName" layoutX="95.0" layoutY="259.0" prefHeight="40.0" prefWidth="400.0" promptText="Enter your name" styleClass="text-field" stylesheets="@../style/style.css" />
+      <JFXButton fx:id="btnEnter" layoutX="246.0" layoutY="315.0" onAction="#enterOnAction" prefHeight="12.0" prefWidth="116.0" styleClass="enterBtn" stylesheets="@../style/style.css" text="Enter🡆">
          <font>
-            <Font name="Segoe UI" size="25.0" />
+            <Font name="Segoe UI" size="18.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnX" layoutX="223.0" layoutY="126.0" onAction="#selectX" text="X">
+      <JFXButton fx:id="btnX" layoutX="223.0" layoutY="126.0" onAction="#selectX" styleClass="selectorBtn" stylesheets="@../style/style.css" text="X">
          <font>
-            <Font name="Segoe UI" size="25.0" />
+            <Font name="Segoe UI Bold" size="25.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnO" layoutX="333.0" layoutY="126.0" onAction="#selectO" text="O">
+      <JFXButton fx:id="btnO" layoutX="333.0" layoutY="126.0" onAction="#selectO" stylesheets="@../style/style.css" text="O">
          <font>
-            <Font name="Segoe UI" size="25.0" />
+            <Font name="Segoe UI Bold" size="25.0" />
          </font>
       </JFXButton>
       <Text layoutX="295.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="or">
@@ -30,12 +32,12 @@
             <Font size="15.0" />
          </font>
       </Text>
-      <Text layoutX="199.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the">
+      <Text fill="WHITE" layoutX="199.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the">
          <font>
             <Font size="15.0" />
          </font>
       </Text>
-      <Text layoutX="309.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic Tac Toe">
+      <Text fill="WHITE" layoutX="309.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic Tac Toe">
          <font>
             <Font name="Impact" size="18.0" />
          </font>
